test/files/neg/t10888.scala
object t10888 {

  val v = java.lang                  // package java.lang is not a value
  val w = java.lang.Thread           // class java.lang.Thread is not a value
  val x = scala.collection           // package scala.collection is not a value
  val y = scala.collection.`package`
  val z = scala.App                  // object App is not a member of package scala

}